2000-09-13  Anders Norlander  <anorland@acc.umu.se>

	* readelf.c (get_machine_flags): Also print EF_MIPS_MACH field.

	* NEWS: Mention support for MIPS32.
	
2000-09-08  Nick Clifton  <nickc@redhat.com>

	* MAINTAINERS: Add Stephane Carrez as maintainer for 68HC[11|12].

2000-09-07  H.J. Lu  <hjl@gnu.org>

	* configure.in (AC_ISC_POSIX): Put after AC_CANONICAL_SYSTEM.
	* configure: Rebuild.

2000-09-06  Alexandre Oliva  <aoliva@redhat.com>

	* configure: Rebuilt with new libtool.m4.

2000-09-05  Nick Clifton  <nickc@redhat.com>

	* aclocal.m4: Regenerate.
	* config.in: Regenerate.
	* configure: Regenerate.

2000-09-04  Todd Vierling  <tv@wasabisystems.com>

	* strip.1: Fix stray '\' in -o formatting.

2000-09-02  Nick Clifton  <nickc@redhat.com>

	* configure.in: Increase version number to 2.10.91.
	* configure: Regenerate.
	* aclocal.m4: Regenerate.
	* config.in: Regenerate.
	* po/binutils.pot: Regenerate.
	
2000-08-31  Alexandre Oliva  <aoliva@redhat.com>

	* acinclude.m4: Include libtool and gettext macros from the
	top level.
	* aclocal.m4, configure: Rebuilt.

2000-08-30  Jamie Guinan  <guinan@bluebutton.com>

	* resrc.c (close_input_stream): Delete extraneous logic

2000-08-24  Hans-Peter Nilsson  <hp@axis.com>

	* NEWS: Mention support for CRIS.

2000-08-21  Nick Clifton  <nickc@redhat.com>

	* addr2line.c: Changed email address for Ulrich Lauther.

2000-08-17  Christopher C. Chimelis <chris@debian.org>

	* objdump.c (LONGEST_ARCH): Set to sizeof("powerpc:common").

2000-08-17  Nick Clifton  <nickc@redhat.com>

	* readelf.c (display_debug_pubnames): Only issue warning
	message once.  Terminate message with a new line.
	(display_debug_aranges): Only display version 2 debug info.

2000-08-14  Todd Vierling <tv@wasabisystems.com>

	* objcopy.c (strip_main): Silently accept -d as an alias for -g
	for compatability with old BSD systems.

2000-08-14  Jason Eckhardt  <jle@cygnus.com>

	* NEWS: Mention i860 support.

2000-08-11  Carlo Wood <carlo@alinoe.com>
